# dem

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.py
bot/: dem.py
img/: __init__.py  processors.py  temp_img.py
static/: fonts.py  lang.py
